--- a/pom.xml
+++ b/pom.xml
@@ -25,11 +25,15 @@
             <artifactId>javafx-swing</artifactId>
             <version>12</version>
         </dependency>
-        <!-- Remove -->
         <dependency>
-            <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-stdlib</artifactId>
-            <version>1.3.72</version>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-web</artifactId>
+            <version>12</version>
+        </dependency>
+        <dependency>
+            <groupId>com.atlassian.commonmark</groupId>
+            <artifactId>commonmark</artifactId>
+            <version>0.15.0</version>
         </dependency>
     </dependencies>
     <build>
