--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
             <artifactId>javafx-web</artifactId>
             <version>12</version>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-stdlib</artifactId>
+            <version>1.3.72</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
