Trying out jpackage

--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,21 @@
                     <options>-Djavax.net.debug=all -Xdock:icon="/images/logo.png"</options>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.2.1</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <mainClass>com.harmony.engine.Launcher</mainClass>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
